adding house system option to chart output
